--- a/po/da.po
+++ b/po/da.po
@@ -1,13 +1,15 @@
-# gettext-0.10/po/da.po  -- initial revision  -*- po -*-
+# gettext-0.10/po/da.po - initial revision  -*- po -*-
 # Copyright (C) 1996 Free Software Foundation, Inc.
 # Keld Simonsen <keld@dkuug.dk>, 2001
 # Thorbjørn Ravn Andersen <ravn@unixsnedkeren.dk>, 1996.
+#
+# Reviewed: 2001-08-31 olau@hardworking.dk
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: GNU gettext 0.10.39\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 2001-08-28 17:32+02:00\n"
+"PO-Revision-Date: 2001-08-31 17:32+0200\n"
 "Last-Translator: Keld Simonsen <keld@dkuug.dk>\n"
 "Language-Team: Danish <dansk@klid.dk>\n"
 "MIME-Version: 1.0\n"
@@ -92,8 +94,8 @@ msgid ""
 "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n"
 msgstr ""
 "Copyright (C) %s Free Software Foundation, Inc.\n"
-"Dette er frit programmel; kildeteksten indeholder kopibetingelser.  Der er\n"
-"INGEN garanti -- end ikke for SALGBARHED eller VELEGNETHED TIL NOGET SÆRLIGT\n"
+"Dette er frit programmel; kildeteksten indeholder kopibetingelser. Der er\n"
+"INGEN garanti - end ikke for SALGBARHED eller VELEGNETHED TIL NOGET SÆRLIGT\n"
 "FORMÅL.\n"
 
 #: src/gettext.c:145 src/msgcmp.c:145 src/msgcomm.c:284 src/msgfmt.c:275
@@ -139,7 +141,7 @@ msgstr ""
 "  [TEKSTDOMÆNE] TEKSTID     hent den oversatte tekst fra TEKSTDOMÆNE\n"
 "                            svarende til TEKSTID\n"
 "\n"
-"(TEKSTID svarer til 'msgid' felterne)\n"
+"(TEKSTID svarer til 'msgid'-felterne)\n"
 
 #: src/gettext.c:262
 #, c-format, no-wrap
@@ -155,12 +157,12 @@ msgid ""
 "Standard search directory: %s\n"
 msgstr ""
 "\n"
-"Hvis TEKSTDOMÆNE parameteren ikke angives, bestemmes domænet ud fra værdien af\n"
-"miljøvariablen TEXTDOMAIN.  Hvis tekstkataloget ikke kan findes i det\n"
+"Hvis TEKSTDOMÆNE-parameteren ikke angives, bestemmes domænet ud fra værdien af\n"
+"miljøvariablen TEXTDOMAIN. Hvis tekstkataloget ikke kan findes i det\n"
 "sædvanlige filkatalog, kan en anden placering angives vha miljøvariablen\n"
 "TEXTDOMAINDIR.\n"
-"Når tilvalget -s bruges, opfører programmet sig som 'echo' kommandoen, men\n"
-"argumenterne bliver ikke blot kopieret til standard uddata.  I stedet\n"
+"Når tilvalget -s bruges, opfører programmet sig som 'echo'-kommandoen, men\n"
+"argumenterne bliver ikke blot kopieret til standard uddata. I stedet\n"
 "oversættes de tekster der findes i det valgte tekstkatalog.\n"
 "Standard filkataloget for søgning er: %s\n"
 
@@ -193,24 +195,24 @@ msgid ""
 "translated each and every message in your program.  Where an exact match\n"
 "cannot be found, fuzzy matching is used to produce better diagnostics.\n"
 msgstr ""
-"Brug: %s [TILVALG] def.po ref.po\n"
+"Brug: %s [TILVALG] gammel.po ny.po\n"
 "Hvis et langt tilvalg tager et argument, gælder det også for den\n"
 "tilsvarende korte udgave.\n"
 "  -D, --directory=FILKATALOG  gennemsøg også FILKATALOG efter inddatafiler\n"
 "  -h, --help                  vis denne hjælpetekst og afslut\n"
 "  -V, --version               vis versions information og afslut\n"
 "\n"
-"Sammenlign to .po filer i Uniforum format for at kontrollere at de begge\n"
-"indeholder det samme sæt af msgid tekststrenge.  PO-filen 'def.po' indeholder\n"
-"de gamle oversættelser og PO-filen 'ref.po' er den nyeste udgave (sædvanligvis\n"
-"oprettet af xgettext).  Dette er en praktisk måde at kontrollere at hver\n"
-"eneste tekst i programmet er oversat.  Hvis der ikke er nøjagtigt sammenfald\n"
+"Sammenlign to .po-filer i Uniforum-format for at kontrollere at de begge\n"
+"indeholder det samme sæt af msgid tekststrenge. PO-filen 'gammel.po' indeholder\n"
+"de gamle oversættelser og PO-filen 'ny.po' er den seneste PO-udgave (sædvanligvis\n"
+"oprettet af xgettext). Dette er en praktisk måde at kontrollere at hver\n"
+"eneste tekst i programmet er oversat. Hvis der ikke er nøjagtigt sammenfald\n"
 "mellem msgid-tekststrengene, benyttes en upræcis sammenligningsmetode til at\n"
 "give bedre fejlretningsinformation.\n"
 
 #: src/msgcmp.c:255 src/msgmerge.c:741
 msgid "this message is used but not defined..."
-msgstr "denne tekst bruges men er ikke erklæret..."
+msgstr "denne tekst bruges, men er ikke erklæret..."
 
 #: src/msgcmp.c:257 src/msgmerge.c:743
 msgid "...but this definition is similar"
@@ -243,7 +245,7 @@ msgstr "... her er den første erklæring"
 #: src/msgcmp.c:397 src/msgmerge.c:561
 #, c-format
 msgid "this message has no definition in the \"%s\" domain"
-msgstr "denne besked har ingen erklæring i '%s' domænet"
+msgstr "denne besked har ingen erklæring i '%s'-domænet"
 
 #. We are about to construct the absolute path to the
 #. directory for the output files but asprintf failed.
@@ -320,7 +322,7 @@ msgstr ""
 "  -p, --output-dir=FILKATALOG    uddatafiler placeres i FILKATALOG\n"
 "  -s, --sort-output              sortér uddata og fjern gentagelser\n"
 "      --strict                   uddata overholder 'streng Uniforum'-stil\n"
-"  -T, --trigraphs                forstå ISO C trigrafer i inddata\n"
+"  -T, --trigraphs                forstå ISO C-trigrafer i inddata\n"
 "  -u, --unique                   kort skrivemåde for --less-than=2, "
 "foranlediger\n"
 "                                 at kun unikke beskeder udskrives\n"
@@ -345,10 +347,24 @@ msgid ""
 "preserved.\n"
 msgstr ""
 "  -V, --version                  vis versionsinformation og afslut\n"
-"  -w, --width=TAL\t\t angiv uddatabredde\n"
-"  -x, --exclude-file=FIL         tekster i FIL benyttes ikke\n"
+"  -w, --width=TAL                angiv uddatabredde\n"
+"  -<, --less-than=TAL            udskriv beskeder med mindre end dette "
+"antal\n"
+"                                 definitioner, er uendelig hvis ikke sat\n"
+"  -<, --more-than=TAL            udskriv beskeder med flere end dette antal\n"
+"                                 definitioner, er 1 hvis ikke sat\n"
 "\n"
-"Hvis INPUTFIL er -, læses fra standard inddata.\n"
+"Find beskeder som er fælles for to eller flere af de angivne PO-filer.\n"
+"Ved brug af --more-than-tilvalget kan en større ensartethed anmodes om\n"
+"før beskeder udskrives. Modsat kan --less-than tilvalget bruges til at "
+"angive\n"
+"mindre ensartethed før beskeder udskrives (dvs --less-than=2 vil kun "
+"udskrive\n"
+"de unikke beskeder). Oversættelser, kommentarer og ekstrakt-kommentarer "
+"beholdes,\n"
+"men kun fra den første PO-fil, der definerer dem. Filpositioner fra alle PO-"
+"filer\n"
+"beholdes.\n"
 
 #: src/msgcomm.c:458 src/msgunfmt.c:361 src/po-lex.c:86 src/xget-lex.c:157
 #: src/xget-lex.c:170 src/xget-lex.c:180 src/xgettext.c:599
@@ -358,7 +374,7 @@ msgstr "fejl ved læse-åbning af '%s'"
 
 #: src/msgcomm.c:539 src/xgettext.c:641 src/xgettext.c:1059
 msgid "this file may not contain domain directives"
-msgstr "denne fil må ikke indeholde 'domain' kommandoer"
+msgstr "denne fil må ikke indeholde 'domain'-kommandoer"
 
 #: src/msgfmt.c:286 src/xgettext.c:404
 msgid "no input file given"
@@ -380,8 +396,8 @@ msgstr[1] "%d oversatte tekster"
 #, c-format
 msgid ", %d fuzzy translation"
 msgid_plural ", %d fuzzy translations"
-msgstr[0] ", %d upræcis oversættelse"
-msgstr[1] ", %d upræcise oversættelser"
+msgstr[0] ", %d uafklaret oversættelse"
+msgstr[1] ", %d uafklarede oversættelser"
 
 #: src/msgfmt.c:370
 #, c-format
@@ -421,7 +437,7 @@ msgstr ""
 "                              multipla af TAL byte (standard %d)\n"
 "  -c, --check                 lav sprogafhængige check af tekster\n"
 "  -D, --directory=FILKATALOG  gennemsøg også FILKATALOG efter inddatafiler\n"
-"  -f, --use-fuzzy             marker upræcise tekster med 'fuzzy' i uddata\n"
+"  -f, --use-fuzzy             markér uafklarede tekster med 'fuzzy' i uddata\n"
 "  -h, --help                  vis denne hjælpetekst og afslut\n"
 "      --no-hash               den binære fil vil ikke indeholde hashtabellen\n"
 "  -o, --output-file=FIL       angiv FIL som uddatafil\n"
@@ -433,7 +449,7 @@ msgstr ""
 "Angives -v mere end en gang, forøges informationsmængden tilsvarende.\n"
 "\n"
 "Hvis inddatafilen er -, læses fra standard-input. Hvis uddatafilen er -,\n"
-"skrives uddata til standard-output.\n"
+"skrives uddata til standard-ud.\n"
 
 #: src/msgfmt.c:435
 msgid "while creating hash table"
@@ -445,7 +461,7 @@ msgid ""
 "%s: warning: PO file header missing, fuzzy, or invalid\n"
 "%*s  warning: charset conversion will not work"
 msgstr ""
-"%s: advarsel: PO filhoved mangler, upræcis eller ugyldig\n"
+"%s: advarsel: PO-filhoved mangler, uafklaret eller ugyldig\n"
 "%*s  advarsel: tegnsætskonvertering vil ikke virke"
 
 #: src/msgfmt.c:503
@@ -456,7 +472,7 @@ msgstr "domænet '%s' kan ikke bruges som filnavn"
 #: src/msgfmt.c:508
 #, c-format
 msgid "domain name \"%s\" not suitable as file name: will use prefix"
-msgstr "domænet '%s' er ikke brugbart som filnavn.  Vil bruge præfiks istedet"
+msgstr "domænet '%s' er ikke brugbart som filnavn. Vil bruge præfiks istedet"
 
 #. We don't change the exit status here because this is really
 #. only an information.
@@ -495,7 +511,8 @@ msgstr "feltet `%s' har stadig den oprindelige standardværdi"
 #: src/msgfmt.c:708
 #, c-format
 msgid "%s: warning: source file contains fuzzy translation"
-msgstr "%s: advarsel: kildetekstfilen indeholder løse oversættelser (fuzzy)"
+msgstr ""
+"%s: advarsel: kildetekstfilen indeholder uafklarede oversættelser (fuzzy)"
 
 #: src/msgfmt.c:930
 msgid "`msgid' and `msgid_plural' entries do not both begin with '\\n'"
@@ -553,14 +570,14 @@ msgid ""
 "  -V, --version               output version information and exit\n"
 "  -w, --width=NUMBER          set output page width\n"
 msgstr ""
-"Brug: %s [TILVALG] def.po ref.po\n"
+"Brug: %s [TILVALG] gammel.po ny.po\n"
 "Hvis et langt tilvalg kræver et argument, gælder det også for det tilsvarende\n"
 "korte tilvalg.\n"
 "  -C, --compendium=FIL        yderligere bibliotek af tekst-oversættelser,\n"
-"                              kan angves mere end én gang\n"
+"                              kan angives mere end én gang\n"
 "  -D, --directory=FILKATALOG  gennemsøg også FILKATALOG efter inddatafiler\n"
 "  -e, --no-escape             brug ikke C-escapesekvenser i uddata (standard)\n"
-"      --force-po              skriv PO filen selv om den er tom\n"
+"      --force-po              skriv PO-filen selv om den er tom\n"
 "  -E, --escape                brug C-escapesekvenser i uddata uden specialtegn\n"
 "  -h, --help                  vis denne hjælp og afslut\n"
 "  -i, --indent                benyt indrykket stil for uddata\n"
@@ -587,15 +604,15 @@ msgid ""
 "results are written to stdout unless an output file is specified.\n"
 msgstr ""
 "\n"
-"Kombinerer to .po filer i Uniforum-stil.  `def.po' filen (som allerede findes)\n"
-"indholder gamle oversættelser som vil blive overført til den nye PO fil under\n"
-"forudsætning af at de stadig passer.  Kommentarer vil blive bevaret i\n"
+"Kombinerer to .po filer i Uniforum-stil. `gammel.po' filen (som allerede findes)\n"
+"indholder gamle oversættelser som vil blive overført til den nye PO-fil under\n"
+"forudsætning af at de stadig passer. Kommentarer vil blive bevaret i\n"
 "modsætning til fil-udtrækskommentarer og filpositioner. `ref.po' filen er den\n"
-"sidst oprettede PO fil (sædvanligvis af xgettext), hvorfra alle oversættelser\n"
+"sidst oprettede PO-fil (sædvanligvis af xgettext), hvorfra alle oversættelser\n"
 "og kommentarer vil blive bortkastet, men 'punktum'-kommentarer og\n"
-"filpositioner vil blive bevaret.  Når der ikke kan findes en nøjagtig\n"
+"filpositioner vil blive bevaret. Når der ikke kan findes en nøjagtig\n"
 "overensstemmelse, vil 'løs søgning' (fuzzy matching) blive brugt til at give\n"
-"bedre resultater.  Med mindre en uddatafil er angivet, vil resultaterne blive\n"
+"bedre resultater. Med mindre en uddatafil er angivet, vil resultaterne blive\n"
 "skrevet til standard uddata.\n"
 
 #: src/msgmerge.c:799
@@ -604,8 +621,8 @@ msgid ""
 "%sRead %ld old + %ld reference, merged %ld, fuzzied %ld, missing %ld, "
 "obsolete %ld.\n"
 msgstr ""
-"%sLæste %ld gamle + %ld reference, flettede %ld, upræcise %ld, mangler %ld, "
-"forældede %ld.\n"
+"%sLæste %ld gamle + %ld reference, flettede %ld, uafklarede %ld, mangler %"
+"ld, forældede %ld.\n"
 
 #: src/msgmerge.c:806
 msgid " done.\n"
@@ -626,15 +643,16 @@ msgid ""
 "  -V, --version            output version information and exit\n"
 "  -w, --width=NUMBER       set output page width\n"
 msgstr ""
-"Brug: %s [TILVALG] def.po ref.po\n"
+"Brug: %s [TILVALG] [FIL]...\n"
 "Hvis et langt tilvalg kræver et argument, gælder det også for det tilsvarende\n"
 "korte tilvalg.\n"
 "  -e, --no-escape          brug ikke C-escapesekvenser i uddata (standard)\n"
-"  -E, --escape             brug C-escapesekvenser i uddata.  Ingen specialtegn\n"
+"  -E, --escape             brug C-escapesekvenser i uddata. Ingen specialtegn\n"
+"      --force-po           skriv PO-fil selv om den er tom\n"
 "  -h, --help               vis denne hjælp og afslut\n"
 "  -i, --indent             benyt indrykket stil for uddata\n"
 "  -o, --output-file=FIL    uddata skrives til FIL\n"
-"      --strict             benyt 'streng Uniforum' stil for uddata\n"
+"      --strict             benyt 'streng Uniforum'-stíl for uddata\n"
 "  -V, --version            vis versionsinformation og afslut\n"
 "  -w, --width=TAL          angiv udskrivningsbredde\n"
 
@@ -648,9 +666,11 @@ msgid ""
 "By default the output is written to standard output.\n"
 msgstr ""
 "\n"
-"Omform binære .mo filer til Uniforum .po filer.  Både 'little-endian'\n"
-"og 'big-endian' .mo filer kan håndteres.  Hvis inddatafilen er -,\n"
-"læses standard inddata.  Som standard skrives til standard uddata.\n"
+"Omform binære .mo-filer til .po-filer i Uniforum-format. Både\n"
+".mo-filer med mest betydende og mindst betydende byte først i\n"
+"hukommelsen kan håndteres. Hvis inddatafilen angives som -, læses fra\n"
+"standard-ind. Hvis en uddatafil ikke er angivet, skrives til\n"
+"standard-ud.\n"
 
 #: src/msgunfmt.c:261 src/msgunfmt.c:326 src/po-lex.c:216 src/xget-lex.c:243
 #, c-format
@@ -675,7 +695,7 @@ msgstr "filen '%s' indeholder en ikke-NUL afsluttet streng"
 #: src/msgunfmt.c:377
 #, c-format
 msgid "file \"%s\" is not in GNU .mo format"
-msgstr "filen '%s' er ikke i GNU .mo format"
+msgstr "filen '%s' er ikke i GNU .mo-format"
 
 #: src/ngettext.c:209
 #, c-format, no-wrap
@@ -711,15 +731,15 @@ msgid ""
 "Standard search directory: %s\n"
 msgstr ""
 "\n"
-"Hvis TEKSTDOMÆNE parameteren ikke angives, bestemmes domænet ud fra værdien af\n"
-"miljøvariablen TEXTDOMAIN.  Hvis tekstkataloget ikke kan findes i det\n"
+"Hvis TEKSTDOMÆNE-parameteren ikke angives, bestemmes domænet ud fra værdien af\n"
+"miljøvariablen TEXTDOMAIN. Hvis tekstkataloget ikke kan findes i det\n"
 "sædvanlige filkatalog, kan en anden placering angives vha miljøvariablen\n"
 "TEXTDOMAINDIR.\n"
-"Standard filkataloget for søgning er: %s\n"
+"Standard-filkataloget for søgning er: %s\n"
 
 #: src/open-po.c:64
 msgid "<stdin>"
-msgstr "<stdin>"
+msgstr "<stdind>"
 
 #: po-gram-gen.y:87
 msgid "inconsistent use of #~"
@@ -735,11 +755,11 @@ msgstr "`msgstr_plural'-afsnit mangler"
 
 #: po-gram-gen.y:183
 msgid "missing `msgstr' section"
-msgstr "`msgstr' afsnit mangler"
+msgstr "`msgstr'-afsnit mangler"
 
 #: po-gram-gen.y:228
 msgid "first plural form has nonzero index"
-msgstr "første flertalsform har ikke-nul indeks"
+msgstr "første flertalsform har indeks, der ikke er nul"
 
 #: po-gram-gen.y:230
 msgid "plural form has wrong index"
@@ -838,7 +858,7 @@ msgstr ""
 #, c-format
 msgid ""
 "internationalized messages should not contain the `\\%c' escape sequence"
-msgstr "oversættelige tekster må ikke indeholde `\\%c' escapesekvensen"
+msgstr "oversættelige tekster må ikke indeholde `\\%c'-escapesekvensen"
 
 #: src/write-po.c:863
 #, c-format
@@ -848,7 +868,7 @@ msgstr "kan ikke oprette uddatafil '%s'"
 #: src/write-po.c:870
 #, no-c-format
 msgid "standard output"
-msgstr "standard uddata"
+msgstr "standard-uddata"
 
 #: src/write-po.c:945
 #, c-format
@@ -857,7 +877,7 @@ msgstr "fejl ved skrivning til filen '%s'"
 
 #: src/xget-lex.c:148
 msgid "standard input"
-msgstr "standard inddata"
+msgstr "standard-inddata"
 
 #: src/xget-lex.c:876
 #, c-format
@@ -867,12 +887,12 @@ msgstr "%s:%d: advarsel:  tegnkonstant ikke afsluttet korrekt"
 #: src/xget-lex.c:898
 #, c-format
 msgid "%s:%d: warning: unterminated string literal"
-msgstr "%s:%d: advarsel: streng'literal' ikke afsluttet"
+msgstr "%s:%d: advarsel: strengkonstant ikke afsluttet"
 
 #: src/xgettext.c:373
 msgid "--join-existing cannot be used when output is written to stdout"
 msgstr ""
-"--join-existing kan ikke benyttes når uddata sendes til standard uddata"
+"--join-existing kan ikke benyttes når uddata sendes til standard-uddata"
 
 #: src/xgettext.c:378
 msgid "xgettext cannot work without keywords to look for"
@@ -919,7 +939,7 @@ msgstr ""
 "  -e, --no-escape                brug ikke C-escapetegn i uddata (standard)\n"
 "  -E, --escape                   brug C-escapetegn i uddata. Ingen tegn udover ASCII\n"
 "  -f, --files-from=FIL           hent inddatafilliste fra FIL\n"
-"      --force-po                 udskriv PO fil selv hvis den er tom\n"
+"      --force-po                 udskriv PO-fil selv hvis den er tom\n"
 "      --foreign-user             undlad FSF copyright i udskrift til fremmed bruger\n"
 "  -F, --sort-by-file             sortér uddata efter filposition\n"
 
@@ -940,12 +960,12 @@ msgstr ""
 "  -h, --help                     vis denne hjælp og afslut\n"
 "  -i, --indent                   skriv .po-filen i indrykket stil\n"
 "  -j, --join-existing            kombiner tekster med eksisterende fil\n"
-"  -k, --keyword[=ORD]            søg efter yderligere nøgleord.  Hvis ORD ikke \n"
+"  -k, --keyword[=ORD]            søg efter yderligere nøgleord. Hvis ORD ikke \n"
 "                                 angives, bruges standard-nøgleord ikke).\n"
 "  -L, --language=NAVN            genkend det angivne sprog (C, C++, PO),\n"
 "                                 ellers gættes det fra filendelsen\n"
-"  -m, --msgstr-prefix[=STRENG]   brug STRENG/'' som prefiks for `msgstr' tekster\n"
-"  -M, --msgstr-suffix[=STRENG]   brug STRENG/'' som suffiks for `msgstr' tekster\n"
+"  -m, --msgstr-prefix[=STRENG]   brug STRENG/'' som præfiks for `msgstr'-tekster\n"
+"  -M, --msgstr-suffix[=STRENG]   brug STRENG/'' som suffiks for `msgstr'-tekster\n"
 "      --no-location              undlad skrivning af '#: filnavn:linie' linier\n"
 
 #: src/xgettext.c:552
