--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-20  Bruno Haible  <haible@clisp.cons.org>
+
+	* es.po: Update from Max de Mendizábal <max@upn.mx>.
+	* sk.po: New file, from Marcel Telka <marcel@telka.sk>.
+
 2001-09-13  Bruno Haible  <haible@clisp.cons.org>
 
 	* gettext-0.10.40 released.
