--- a/po/es.po
+++ b/po/es.po
@@ -1,17 +1,17 @@
 # Mensajes en español para GNU gettext.
-# Copyright (C) 1996, 1997, 1998 Free Software Foundation, Inc.
-# Max de Mendizábal <max@tirania.nuclecu.unam.mx>, 1996, 1997, 1998.
+# Copyright (C) 1996, 1997, 1998, 2001 Free Software Foundation, Inc.
+# Max de Mendizábal <max@upn.mx>, 1996, 1997, 1998, 2001.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: GNU gettext 0.10.34\n"
+"Project-Id-Version: GNU gettext 0.10.39\n"
 "POT-Creation-Date: 2001-05-23 23:03+0200\n"
-"PO-Revision-Date: 1998-04-29 12:04-0500\n"
-"Last-Translator: Max de Mendizábal <max@tirania.nuclecu.unam.mx>\n"
+"PO-Revision-Date: 2001-08-21 11:21-0500\n"
+"Last-Translator: Max de Mendizábal <max@upn.mx>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8-bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 # Nota: El error es del sistema, pero no se sabe cuál es el error,
@@ -83,7 +83,6 @@ msgstr "%s: la opción `-W %s' no admite ningún argumento\n"
 
 #: lib/obstack.c:474 lib/xmalloc.c:86 src/po.c:308 src/po.c:381 src/po.c:389
 #: src/po.c:395 src/po.c:415 src/po.c:422 src/po.c:427 src/po.c:444
-#, fuzzy
 msgid "memory exhausted"
 msgstr "Memoria agotada"
 
@@ -328,10 +327,11 @@ msgstr "atención: este mensaje no se utiliza"
 # 07061996mm: Mujer fatal es menos que mortal, menos que peligroso e incita a la
 # aventura. Quizá no sea tan malo como dice Enrique, a menos que...
 #: src/msgcmp.c:283 src/po-lex.c:103
-#, fuzzy, c-format
+#, c-format
 msgid "found %d fatal error"
 msgid_plural "found %d fatal errors"
-msgstr[0] "se encontraron %d errores fatales"
+msgstr[0] "se encontró el error fatal %d"
+msgstr[1] "se encontraron %d errores fatales"
 
 # Nota: es la definición la que está duplicada.
 #: src/msgcmp.c:356 src/msgfmt.c:667 src/msgmerge.c:512 src/xgettext.c:1157
@@ -403,7 +403,6 @@ msgstr ""
 "  -F, --sort-by-file             ordena la salida por ubicación del fichero\n"
 "  -h, --help                     muestra esta ayuda y finaliza\n"
 
-#
 # 19071996cb:   --omit-header    no escribe la cabecera para la entrada
 # 20071996sv: Creo que lo que tiene Max ahora mismo es mejor. "with" es "con"
 # 29071996mm: Creo que si. Mejor ahí lo dejamos.
@@ -538,22 +537,25 @@ msgid "error while opening \"%s\" for writing"
 msgstr "error al abrir el fichero \"%s\" para escritura"
 
 #: src/msgfmt.c:360
-#, fuzzy, c-format
+#, c-format
 msgid "%d translated message"
 msgid_plural "%d translated messages"
-msgstr[0] "%d mensajes traducidos"
+msgstr[0] "%d mensaje traducido"
+msgstr[1] "%d mensajes traducidos"
 
 #: src/msgfmt.c:365
-#, fuzzy, c-format
+#, c-format
 msgid ", %d fuzzy translation"
 msgid_plural ", %d fuzzy translations"
-msgstr[0] ", %d traducciones difusas"
+msgstr[0] ", %d traducción difusa"
+msgstr[1] ", %d traducciones difusas"
 
 #: src/msgfmt.c:370
-#, fuzzy, c-format
+#, c-format
 msgid ", %d untranslated message"
 msgid_plural ", %d untranslated messages"
-msgstr[0] ", %d mensajes sin traducir"
+msgstr[0] ", %d mensaje sin traducir"
+msgstr[1] ", %d mensajes sin traducir"
 
 # "enlista" queda "raro", ¿qué te parece "muestra" o algo así? sv
 # ok, puse muestra pero, ¿qué tal `enumera'? mm
@@ -651,11 +653,14 @@ msgid "while creating hash table"
 msgstr "mientras se creaba la tabla de `hash'"
 
 #: src/msgfmt.c:479
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%s: warning: PO file header missing, fuzzy, or invalid\n"
 "%*s  warning: charset conversion will not work"
-msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
+msgstr ""
+"%s: atención: El encabezado del archivo PO está extraviado, es difuso o "
+"inválido\n"
+"%*s: atención: la conversión del conjunto de caracteres no funcionará"
 
 #: src/msgfmt.c:503
 #, c-format
@@ -731,9 +736,9 @@ msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
 # Si no se te ocurre nada mejor, sugerencia:
 # "Una de las líneas msgid y msgstr comienza con `\\n' y la otra no" sv+
 #: src/msgfmt.c:930
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both begin with '\\n'"
-msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' inicial"
+msgstr ""
+"a alguna de las líneas `msgid' y `msgid_plural' les falta el `\\n' inicial"
 
 # ¿qué les parece: "a `msgid' o `msgstr' les falta el `\\n' final"? cb
 # Bien. Mejora. mm
@@ -752,9 +757,10 @@ msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' inicial"
 # Si no se te ocurre nada mejor, sugerencia:
 # "Una de las líneas msgid y msgstr comienza con `\\n' y la otra no" sv+
 #: src/msgfmt.c:938
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both begin with '\\n'"
-msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' inicial"
+msgstr ""
+"a alguna de las líneas `msgid' y `msgstr[%u]' les falta el `\\n' inicial"
 
 # ¿qué les parece: "a `msgid' o `msgstr' les falta el `\\n' final"? cb
 # Bien. Mejora. mm
@@ -779,16 +785,16 @@ msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' inicial"
 # Lo mismo, no es que a una de las dos le falte, sino que una lo tiene
 # y la otra no, así de sencillo. sv+
 #: src/msgfmt.c:963
-#, fuzzy
 msgid "`msgid' and `msgid_plural' entries do not both end with '\\n'"
-msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' final"
+msgstr ""
+"a alguna de las líneas `msgid' y `msgid_plural' les falta el `\\n' final"
 
 # Lo mismo, no es que a una de las dos le falte, sino que una lo tiene
 # y la otra no, así de sencillo. sv+
 #: src/msgfmt.c:971
-#, fuzzy, c-format
+#, c-format
 msgid "`msgid' and `msgstr[%u]' entries do not both end with '\\n'"
-msgstr "a alguna de las líneas `msgid' y `msgstr' les falta el `\\n' final"
+msgstr "a alguna de las líneas `msgid' y `msgstr[%u]' les falta el `\\n' final"
 
 # Lo mismo, no es que a una de las dos le falte, sino que una lo tiene
 # y la otra no, así de sencillo. sv+
@@ -802,15 +808,16 @@ msgstr ""
 "el número de especificaciones de formato en `msgid' y 'msgstr' no coincide"
 
 #: src/msgfmt.c:1014
-#, fuzzy, c-format
+#, c-format
 msgid "format specifications for argument %lu are not the same"
-msgstr "las especificaciones de formato para el argumento %u no son las mismas"
+msgstr ""
+"las especificaciones de formato para el argumento %lu no son las mismas"
 
 # Lo mismo en ' informa de la versión...' em
 # Obligatorios.. obligatorios , queda un poco feo. Si lo que se pretende
 # es ser fiel al original, pon 'son tambien obligatorios para...' em+
 #: src/msgmerge.c:320
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] def.po ref.po\n"
 "Mandatory arguments to long options are mandatory for short options too.\n"
@@ -834,10 +841,12 @@ msgstr ""
 "Los argumentos obligatorios para las opciones largas también son\n"
 "obligatorios para las opciones cortas.\n"
 "\n"
+"  -C, --compendium=FICHERO   la biblioteca adicional de traducción de \n"
+"                             mensajes puede ser especificada más de una vez\n"
 "  -D, --directory=DIRECTORIO añade el DIRECTORIO a la lista de\n"
 "                             búsqueda de ficheros de entrada\n"
 "  -e, --no-escape            no utiliza escapes C en la salida (por defecto)\n"
-"  -E, --escape               utiliza escape C en la salida, sin caracteres\n"
+"  -E, --escape               utiliza escapes C en la salida, sin caracteres\n"
 "                             extendidos\n"
 "      --force-po             escribe un fichero .po incluso si está vacío\n"
 "  -h, --help                 muestra esta ayuda y finaliza\n"
@@ -877,13 +886,13 @@ msgstr ""
 "estándar a menos que se especifique un fichero de salida.\n"
 
 #: src/msgmerge.c:799
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "%sRead %ld old + %ld reference, merged %ld, fuzzied %ld, missing %ld, "
 "obsolete %ld.\n"
 msgstr ""
-"%sleídos %d mensajes antiguos + %d mensajes de referencia\n"
-"incorporados %d, convertidos en difusos %d, faltan %d, obsoletos %d.\n"
+"%sleídos %ld mensajes antiguos + %ld mensajes de referencia\n"
+"incorporados %ld, convertidos en difusos %ld, faltan %ld, obsoletos %ld.\n"
 
 # Porque no mejor poner simplemente 'fin'? mm++
 #: src/msgmerge.c:806
@@ -965,9 +974,9 @@ msgid "seek \"%s\" offset %ld failed"
 msgstr "fallo en la lectura \"%s\" en la posición (offset) %ld"
 
 #: src/msgunfmt.c:332
-#, fuzzy, c-format
+#, c-format
 msgid "file \"%s\" contains a not NUL terminated string"
-msgstr "el fichero \"%s\" no está en el formato .mo de GNU"
+msgstr "el fichero \"%s\" contiene una cadena no terminada en NUL"
 
 #: src/msgunfmt.c:377
 #, c-format
@@ -988,7 +997,7 @@ msgstr "el fichero \"%s\" no está en el formato .mo de GNU"
 # es en otra opción en donde aparece. mm
 #
 #: src/ngettext.c:209
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "Usage: %s [OPTION] [TEXTDOMAIN] MSGID MSGID-PLURAL COUNT\n"
 "  -d, --domain=TEXTDOMAIN   retrieve translated message from TEXTDOMAIN\n"
@@ -1000,21 +1009,22 @@ msgid ""
 "  MSGID MSGID-PLURAL        translate MSGID (singular) / MSGID-PLURAL (plural)\n"
 "  COUNT                     choose singular/plural form based on this value\n"
 msgstr ""
-"Modo de empleo: %s [OPCIÓN] [[[DOMINIOTEXTO] MSGID] | [-s [MSGID]...]]\n"
+"Modo de empleo: %s [OPCIÓN] [DOMINIOTEXTO] MSGID MSGID-PLURAL CUENTA\n"
 "  -d, --domain=DOMINIOTEXTO obtiene los mensajes traducidos de DOMINIOTEXTO\n"
 "  -e                        habilita la expansión de algunas secuencias\n"
 "                            de escape\n"
 "  -E                        (existe por compatibilidad, no tiene efecto)\n"
 "  -h, --help                muestra este texto de ayuda y finaliza\n"
-"  -n                        suprime el carácter de nueva línea\n"
 "  -V, --version             informa de la versión y finaliza\n"
-"  [DOMINIOTEXTO] MSGID      obtiene el mensaje traducido correspondiente\n"
-"                            al MSGID del DOMINIOTEXTO\n"
+"  [DOMINIOTEXTO]            obtiene el mensaje traducido del DOMINIOTEXTO\n"
+"  MSGID MSGID-PLURAL        traduce el MSGID (singular) / MSGID-PLURAL (plural)\n"
+"  CUENTA                    selecciona la forma singular/plural con base\n"
+"                            en este valor\n"
 
 # Nota: TEXTDOMAIN y TEXTDOMAINDIR son variables de entorno, por lo tanto
 # no se pueden traducir (cuando se refieren a las variables, claro está).
 #: src/ngettext.c:221
-#, fuzzy, c-format, no-wrap
+#, c-format, no-wrap
 msgid ""
 "\n"
 "If the TEXTDOMAIN parameter is not given, the domain is determined from the\n"
@@ -1028,27 +1038,21 @@ msgstr ""
 "la variable de entorno TEXTDOMAIN. Si el catálogo de mensajes no está en\n"
 "el directorio por defecto, con la variable de entorno TEXTDOMAINDIR se\n"
 "puede especificar otro lugar.\n"
-"Cuando se utiliza con la opción -s, el programa se comporta como la\n"
-"instrucción `echo', pero no se reduce a hacer simplemente una copia en\n"
-"la salida estándar (stdout) sino que además traduce los mensajes que\n"
-"encuentre dentro del catálogo seleccionado.\n"
 "Directorio de búsqueda estándar: %s\n"
 
 #: src/open-po.c:64
 msgid "<stdin>"
-msgstr ""
+msgstr "<stdin>"
 
 #: po-gram-gen.y:87
 msgid "inconsistent use of #~"
-msgstr ""
+msgstr "uso inconsistente de #~"
 
 #: po-gram-gen.y:168
-#, fuzzy
 msgid "missing `msgstr[]' section"
 msgstr "no hay sección `msgstr'"
 
 #: po-gram-gen.y:176
-#, fuzzy
 msgid "missing `msgid_plural' section"
 msgstr "no hay sección `msgstr'"
 
@@ -1058,11 +1062,11 @@ msgstr "no hay sección `msgstr'"
 
 #: po-gram-gen.y:228
 msgid "first plural form has nonzero index"
-msgstr ""
+msgstr "la primera forma del plural tiene un índice distinto a cero"
 
 #: po-gram-gen.y:230
 msgid "plural form has wrong index"
-msgstr ""
+msgstr "la primera forma del plural tiene un índice incorrecto"
 
 # Abortando queda un poco feo. ¿qué se podría poner en su lugar?
 # Aterrizaje forzoso! el programa no puede continuar. Que te parece? mm.
@@ -1110,7 +1114,6 @@ msgid "keyword \"%s\" unknown"
 msgstr "palabra clave \"%s\" desconocida"
 
 #: src/po-lex.c:377
-#, fuzzy
 msgid "invalid control sequence"
 msgstr "secuencia de control ilegal"
 
@@ -1123,29 +1126,31 @@ msgid "end-of-line within string"
 msgstr "fin de línea dentro de una cadena"
 
 #: src/po-lex.c:528 src/write-po.c:291 src/write-po.c:373
-#, fuzzy
 msgid "invalid multibyte sequence"
-msgstr "secuencia de control ilegal"
+msgstr "sucesión de multibyte inválida"
 
 #: src/po.c:302 src/po.c:374 src/po.c:409 src/po.c:439
 #, c-format
 msgid "%s: warning: "
-msgstr ""
+msgstr "%s: atención: "
 
 #: src/po.c:303
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Charset \"%s\" is not a portable encoding name.\n"
 "Message conversion to user's charset might not work.\n"
-msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
+msgstr ""
+"El conjunto de caracteres \"%s\" no es un nombre de codificación portátil.\n"
+"La conversión de mensajes al conjunto de caracteres del usuario podría no "
+"funcionar.\n"
 
 #: src/po.c:370 src/po.c:405
 msgid "Continuing anyway, expect parse errors."
-msgstr ""
+msgstr "Se continúa de todas formas, aunque habrá errores de parseo."
 
 #: src/po.c:372
 msgid "Continuing anyway."
-msgstr ""
+msgstr "Se continúa de todas formas."
 
 #: src/po.c:375
 #, c-format
@@ -1153,17 +1158,21 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv(),\n"
 "and iconv() does not support \"%s\".\n"
 msgstr ""
+"El conjunto de caracteres \"%s\" no está soportado. %s se basa en iconv(),\n"
+"e iconv() no soporta \"%s\".\n"
 
 #: src/po.c:385 src/po.c:418
 msgid ""
 "Installing GNU libiconv and then reinstalling GNU gettext\n"
 "would fix this problem.\n"
 msgstr ""
+"Instalando GNU libiconv y luego reinstalando GNU gettext\n"
+"podría arreglar este problema.\n"
 
 #: src/po.c:393 src/po.c:425
 #, c-format
 msgid "%s\n"
-msgstr ""
+msgstr "%s\n"
 
 #: src/po.c:410
 #, c-format
@@ -1171,13 +1180,17 @@ msgid ""
 "Charset \"%s\" is not supported. %s relies on iconv().\n"
 "This version was built without iconv().\n"
 msgstr ""
+"El conjunto de caracteres \"%s\" no está soportado. %s se basa en iconv().\n"
+"Esta versión fue construida sin iconv().\n"
 
 #: src/po.c:440
-#, fuzzy
 msgid ""
 "Charset missing in header.\n"
 "Message conversion to user's charset will not work.\n"
-msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
+msgstr ""
+"No hay un conjunto de caracteres especificado en el encabezado.\n"
+"La conversión de mensajes al conjunto de caracteres del usuario no "
+"funcionará.\n"
 
 #: src/write-po.c:322
 #, c-format
@@ -1224,7 +1237,7 @@ msgstr ""
 
 #: src/xgettext.c:378
 msgid "xgettext cannot work without keywords to look for"
-msgstr ""
+msgstr "xgettext no puede funcionar sin palabras claves que buscar"
 
 #: src/xgettext.c:484
 #, c-format
@@ -1289,7 +1302,7 @@ msgstr ""
 "  -F, --sort-by-file             ordena la salida por ubicación del fichero\n"
 
 #: src/xgettext.c:540
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "  -h, --help                     display this help and exit\n"
 "  -i, --indent                   write the .po file using indented style\n"
@@ -1309,8 +1322,6 @@ msgstr ""
 "  -k, --keyword[=PALABRA]        busca palabras claves adicionales (sin\n"
 "                                 PALABRA significa que no utilice las palabras\n"
 "                                 clave por defecto)\n"
-"  -l, --string-limit=NÚMERO      pone como límite de la longitud de la cadena\n"
-"                                 a NÚMERO en vez de %u\n"
 "  -L, --language=NOMBRE          reconoce el lenguaje especificado (C, C++, PO),\n"
 "                                 de otra forma, se supone por medio de la\n"
 "                                 extensión del fichero\n"
@@ -1320,7 +1331,6 @@ msgstr ""
 "                                 entradas msgstr\n"
 "      --no-location              no escribe líneas `#: fichero:línea'\n"
 
-#
 # 19071996cb:   --omit-header    no escribe la cabecera para la entrada
 # 20071996sv: Creo que lo que tiene Max ahora mismo es mejor. "with" es "con"
 # 29071996mm: Creo que si. Mejor ahí lo dejamos.
@@ -1361,36 +1371,21 @@ msgstr ""
 "Si el FICHERO_DE_ENTRADA es -, se lee de la entrada estándar.\n"
 
 #: src/xgettext.c:914
-#, fuzzy, c-format
+#, c-format
 msgid "%s:%d: warning: keyword nested in keyword arg"
-msgstr "%s:%d: atención: literal de cadena no finalizada"
+msgstr "%s:%d: atención: palabra clave anidada en su propio argumento"
 
 #: src/xgettext.c:924
 #, c-format
 msgid "%s:%d: warning: keyword between outer keyword and its arg"
 msgstr ""
+"%s:%d: atención: hay una palabra clave entre la palabra clave externa y su "
+"argumento"
 
 #: src/xgettext.c:1420
 #, c-format
 msgid "language `%s' unknown"
 msgstr "lenguaje `%s' desconocido"
-
-#, fuzzy
-#~ msgid ""
-#~ "%s: warning: charset \"%s\" is not supported by iconv%s\n"
-#~ "%*s  warning: consider installing GNU libiconv and then\n"
-#~ "%*s           reinstalling GNU gettext"
-#~ msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
-
-#, fuzzy
-#~ msgid ""
-#~ "%s: warning: charset \"%s\" is not supported without iconv%s\n"
-#~ "%*s  warning: consider installing GNU libiconv and then\n"
-#~ "%*s           reinstalling GNU gettext"
-#~ msgstr "%s: atención: el fichero fuente contiene una traducción difusa"
-
-#~ msgid "Memory exhausted"
-#~ msgstr "Memoria agotada"
 
 #~ msgid "%s: warning: no header entry found"
 #~ msgstr "%s: atención: no se encontró la línea de cabecera"
