--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-03-30  Bruno Haible  <bruno@clisp.org>
+
+	* README.woe32: Update for Cygwin 1.7.x.
+
 2010-03-28  Bruno Haible  <bruno@clisp.org>
 
 	* NEWS: Deprecate the use of AM_GNU_GETTEXT with 'no-libtool' argument
