--- a/autoconf-lib-link/ChangeLog
+++ b/autoconf-lib-link/ChangeLog
@@ -1,3 +1,17 @@
+2010-04-02  Bruno Haible  <bruno@clisp.org>
+
+	Move unit tests to gnulib.
+	* tests: Remove subdirectory.
+	* Makefile.am (SUBDIRS): Remove tests.
+	(all-local, build-aux-dir, build-aux/*): Remove targets.
+	(DISTCLEANFILES): Remove augmentation.
+	(distclean-local): Remove target.
+	(CONFIGURES_RPATH*, SUBCONFIGURES): Remove variables.
+	($(srcdir)/tests/rpath*/*, subconfigures): Remove targets.
+	* configure.ac: Remove checks for tests/rpathcfg and tests/rpath*.
+	(AC_CONFIG_FILES): Drop postprocessing of Makefile. Drop
+	tests/Makefile.
+
 2009-05-23  Bruno Haible  <bruno@clisp.org>
 
 	* configure.ac (AM_INIT_AUTOMAKE): Add 'silent-rules' option.
