--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-10  Bruno Haible  <bruno@clisp.org>
+
+	vasnprintf: Fix multiple test failures on mingw.
+	* vasnprintf.c (SNPRINTF) [mingw]: Define to snprintf, not _snprintf,
+	or snwprintf, not _snwprintf.
+
 2010-03-25  Bruno Haible  <bruno@clisp.org>
 
 	Minor formatting changes.
