--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-10  Bruno Haible  <bruno@clisp.org>
+
+	vasnprintf: Fix multiple test failures on mingw.
+	* vasnprintf.c (SNPRINTF) [mingw]: Define to snprintf, not _snprintf,
+	or snwprintf, not _snwprintf.
+
 2010-01-01  Bruno Haible  <bruno@clisp.org>
 
 	* vasnprintf.c (VASNPRINTF): If GNULIB_defined_mbstate_t is defined,
